# Flutter-MusicApp

./: .flutter-plugins-dependencies  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/090343de0c0f9ecdd0861a52b130b63b/: .filecache  dart_build.d  dart_build.stamp  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
MediaApp/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
MediaApp/.dart_tool/: package_config.json  package_config_subset
MediaApp/lib/: main.dart
MediaApp/lib/services/: baseservice.dart  usbservice.dart
MediaApp/linux/runner/: my_application.cc
MediaApp/test/: widget_test.dart
MediaApp/web/: index.html
MediaApp/windows/: CMakeLists.txt
MediaApp/windows/runner/: main.cpp
MediaServer/: CMakeLists.txt  main.cpp  mediaserver.cpp  mediaserver.h
MediaServer/common/: eventloop.cpp  eventloop.h  fileexplorer.cpp  fileexplorer.h
android/app/: build.gradle.kts
ios/Runner/: Info.plist
lib/: main.dart
lib/data/model/: songinfo.dart
lib/data/repository/: repository.dart
lib/data/source/: source.dart
lib/mediaapp/service/: usbservice.dart
lib/ui/account/: account.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
web/: manifest.json
windows/runner/: Runner.rc
(+112 files in other folders)
